[package]
name = "markers"
version = "0.1.0"
authors = ["fizzesshark"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
tokio = "0.2.22"
mongodb = "1.1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]