[package]
name = "markers"
version = "0.1.0"
authors = ["fizzesshark"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
tokio = "0.2.22"
serde = "1.0"
dotenv = "0.15.0"
rust-argon2 = "0.8.2"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "serve", "json"]

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["sync"]